<resources>
    <string name="app_name">ProyectoAB</string>
    <string name="slogan">Welcome to the world biggest community</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Don\'t have an account?</string>
    <string name="register_btn">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_username">Select your username:</string>
    <string name="description">Basic Android course student</string>
    <string name="place">From: CDMX, Mexico</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="reddit">Reddit</string>
    <string name="github">Github</string>
</resources>